--- a/static/js/_source/Makefile
+++ b/static/js/_source/Makefile
@@ -4,10 +4,13 @@ VERSION=` date "+%Y.%m%d" `
 RELEASE_DIR=release
 COPY_DIR=..
 RELEASE_FILE= $(PACKAGE)-$(VERSION).js
+RELEASE_FILE_MIN= $(PACKAGE)-$(VERSION).min.js
 COPY_FILE=$(PACKAGE).js
 
 all:
 	@@echo "Building..."
-	@@cat $(SRC_DIR)/core.js $(SRC_DIR)/nav.js $(SRC_DIR)/form.js $(SRC_DIR)/catalog.js > $(RELEASE_DIR)/$(RELEASE_FILE)
+	@@cat $(SRC_DIR)/core.js $(SRC_DIR)/event.js $(SRC_DIR)/fx.js $(SRC_DIR)/nav.js $(SRC_DIR)/form.js $(SRC_DIR)/catalog.js > $(RELEASE_DIR)/$(RELEASE_FILE)
 	@@echo "Build completed."
+	@@echo "Minifying..."
+	#@@java -jar tools/compiler.jar --js $(RELEASE_DIR)/$(RELEASE_FILE) --js_output_file $(RELEASE_DIR)/$(RELEASE_FILE_MIN)  
 	@@cp $(RELEASE_DIR)/$(RELEASE_FILE) $(COPY_DIR)/$(COPY_FILE)
