--- a/_source/js/MakefileFull
+++ b/_source/js/MakefileFull
@@ -2,14 +2,14 @@ PACKAGE=mootor
 SRC_DIR=src
 VERSION=` date "+%Y.%m%d" `
 RELEASE_DIR=release
-COPY_DIR=..
+COPY_DIR=../../js
 RELEASE_FILE= $(PACKAGE)-$(VERSION).js
 RELEASE_FILE_MIN= $(PACKAGE)-$(VERSION).min.js
 COPY_FILE=$(PACKAGE).js
 
 all:
 	@@echo "Building..."
-	@@cat $(SRC_DIR)/core.js $(SRC_DIR)/fx.js $(SRC_DIR)/gestures.js $(SRC_DIR)/nav.js > $(RELEASE_DIR)/$(RELEASE_FILE)
+	@@cat $(SRC_DIR)/header.js $(SRC_DIR)/core.js $(SRC_DIR)/fx.js $(SRC_DIR)/gestures.js $(SRC_DIR)/footer.js > $(RELEASE_DIR)/$(RELEASE_FILE)
 	@@echo "Build completed."
 	@@cp $(RELEASE_DIR)/$(RELEASE_FILE) $(COPY_DIR)/$(COPY_FILE)
 	#@@java -jar tools/yuicompressor.jar $(RELEASE_DIR)/$(RELEASE_FILE) -o $(RELEASE_DIR)/$(RELEASE_FILE_MIN)  
