--- a/source/js/app/Makefile
+++ b/source/js/app/Makefile
@@ -1,15 +1,17 @@
 PACKAGE=app
-SRC_DIR=.
 VERSION=lastest
 RELEASE_DIR=release
 COPY_DIR=../../../js/plugins
 RELEASE_FILE= $(PACKAGE)-$(VERSION).js
-RELEASE_FILE_MIN= $(PACKAGE)-$(VERSION).min.js
 COPY_FILE=$(PACKAGE).js
 
 all:
 	@@echo "Building..."
-	@@cat $(SRC_DIR)/app.js > $(RELEASE_DIR)/$(RELEASE_FILE)
+	@@cat _header.js\
+	      app.js\
+	      model.js\
+	      _footer.js\
+	      > $(RELEASE_DIR)/$(RELEASE_FILE)
 	@@echo "Build completed."
 	@@cp $(RELEASE_DIR)/$(RELEASE_FILE) $(COPY_DIR)/$(COPY_FILE)
 	@@echo "Build completed."
