--- a/source/js/app/MakefileFull
+++ b/source/js/app/MakefileFull
@@ -1,6 +1,5 @@
 PACKAGE=app
-SRC_DIR=.
-VERSION=` date "+%Y.%m%d" `
+VERSION=lastest
 RELEASE_DIR=release
 COPY_DIR=../../../js/plugins
 RELEASE_FILE= $(PACKAGE)-$(VERSION).js
@@ -10,9 +9,15 @@ COPY_FILE_MIN=$(PACKAGE).min.js
 
 all:
 	@@echo "Building..."
-	@@cat $(SRC_DIR)/app.js > $(RELEASE_DIR)/$(RELEASE_FILE)
+	@@cat _header.js\
+	      app.js\
+	      model.js\
+	      _footer.js\
+	      > $(RELEASE_DIR)/$(RELEASE_FILE)
 	@@echo "Build completed."
 	@@cp $(RELEASE_DIR)/$(RELEASE_FILE) $(COPY_DIR)/$(COPY_FILE)
+	@@echo "Build completed."
+
 	@@java -jar ../tools/yuicompressor.jar $(RELEASE_DIR)/$(RELEASE_FILE) -o $(RELEASE_DIR)/$(RELEASE_FILE_MIN)  
 	@@echo "Minifying..."
 	@@cp $(RELEASE_DIR)/$(RELEASE_FILE_MIN) $(COPY_DIR)/$(COPY_FILE_MIN)
