* Delete old files, improvements on Gestures, Nav. Draft for new UI.Camera plugin.
* Improvements on Gestures: restored  velocity for drag events
* Nav: bugfixes on onLoadContent event
* Draft for UI.Camera plugin

--- a/source/js/ui/Makefile
+++ b/source/js/ui/Makefile
@@ -18,6 +18,7 @@ all:
 	      select.js\
 	      text.js\
 	      textarea.js\
+	      camera.js\
 	      ui.js\
 	      _footer.js\
 	      > $(RELEASE_DIR)/$(RELEASE_FILE)
