--- a/source/js/ui/MakefileFull
+++ b/source/js/ui/MakefileFull
@@ -19,6 +19,7 @@ all:
 	      select.js\
 	      text.js\
 	      textarea.js\
+	      camera.js\
 	      ui.js\
 	      _footer.js\
 	      > $(RELEASE_DIR)/$(RELEASE_FILE)
