New UI.SimpleCamera plugin (draft). Bugfix on Nav (stopPropagation for navigation links)

--- a/source/js/ui/Makefile
+++ b/source/js/ui/Makefile
@@ -19,6 +19,7 @@ all:
 	      text.js\
 	      textarea.js\
 	      camera.js\
+	      simpleCamera.js\
 	      ui.js\
 	      _footer.js\
 	      > $(RELEASE_DIR)/$(RELEASE_FILE)
