--- a/source/js/ui/MakefileFull
+++ b/source/js/ui/MakefileFull
@@ -20,6 +20,7 @@ all:
 	      text.js\
 	      textarea.js\
 	      camera.js\
+	      simpleCamera.js\
 	      ui.js\
 	      _footer.js\
 	      > $(RELEASE_DIR)/$(RELEASE_FILE)
