+ UI.date UI.time, Draw plugin

--- a/source/js/draw/MakefileFull
+++ b/source/js/draw/MakefileFull
@@ -1,4 +1,4 @@
-PACKAGE=ui
+PACKAGE=draw
 VERSION=lastest
 RELEASE_DIR=release
 COPY_DIR=../../../js/plugins
@@ -10,21 +10,7 @@ COPY_FILE_MIN=$(PACKAGE).min.js
 all:
 	@@echo "Building..."
 	@@cat _header.js\
-	      templates.js\
-	      overlay.js\
-	      input.js\
-	      switch.js\
-	      checkbox.js\
-	      radio.js\
-	      select.js\
-	      date.js\
-	      time.js\
-	      text.js\
-	      textarea.js\
-	      camera.js\
-	      simpleCamera.js\
-	      map.js\
-	      ui.js\
+	      draw.js\
 	      _footer.js\
 	      > $(RELEASE_DIR)/$(RELEASE_FILE)
 	@@echo "Build completed."
